--- a/browser/index.html
+++ b/browser/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Juke</title>
     <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/bootstrap-dark.css" rel="stylesheet" />
@@ -21,58 +22,59 @@
     <script src="/js/playlist/playlist.controller.js" defer></script>
     <script src="/js/playlist/playlist.factory.js" defer></script>
     <script src="/js/playlist/playlist.states.js" defer></script>
-  </head>
-  <body ng-app="juke">
-    <div id="main" class="container-fluid">
+</head>
 
-      <div class="col-xs-2">
-        <sidebar ng-controller="SidebarCtrl">
-          <img src="juke.svg" class="logo">
-          <section>
-            <h4 ui-sref-active="active" class="menu-item active">
+<body ng-app="juke">
+    <div id="main" class="container-fluid">
+        <div class="col-xs-2">
+            <sidebar ng-controller="SidebarCtrl">
+                <img src="juke.svg" class="logo">
+                <section>
+                    <h4 ui-sref-active="active" class="menu-item active">
               <a ui-sref="albums">ALBUMS</a>
             </h4>
-          </section>
-          <section>
-            <h4 ui-sref-active="active" class="menu-item">
+                </section>
+                <section>
+                    <h4 ui-sref-active="active" class="menu-item">
               <a ui-sref="artists">ARTISTS</a>
             </h4>
-          </section>
-          <hr>
-          <section>
-            <h4 class="text-muted">PLAYLISTS</h4>
-            <p>
-              <a ui-sref="newPlaylist" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
-            </p>
-          </section>
-        </sidebar>
-      </div>
-
-      <div class="col-xs-10">
-        <ui-view></ui-view>
-      </div>
-
-      <footer>
-        <div ng-show="getCurrentSong()" ng-controller="PlayerCtrl">
-          <div class="pull-left">
-            <button class="btn btn-default" ng-click="previous()">
-              <span class="glyphicon glyphicon-step-backward"></span>
-            </button>
-            <button class="btn btn-default" ng-click="toggle()">
-              <span class="glyphicon" ng-class="{'glyphicon-pause': isPlaying(), 'glyphicon-play': !isPlaying()}"></span>
-            </button>
-            <button class="btn btn-default" ng-click="next()">
-              <span class="glyphicon glyphicon-step-forward"></span>
-            </button>
-          </div>
-          <div class="bar">
-            <div class="progress" ng-click="handleProgressClick($event)">
-              <div class="progress-bar" ng-style="{width: getPercent() + '%'}"></div>
-            </div>
-          </div>
+                </section>
+                <hr>
+                <section>
+                    <h4 class="text-muted">PLAYLISTS</h4>
+                    <p>
+                        <a ui-sref="newPlaylist" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
+                    </p>
+                </section>
+                <p class="playlist-item" ng-repeat="playlist in playlists">
+                    <a>{{playlist}}</a>
+                </p>
+            </sidebar>
         </div>
-      </footer>
-
+        <div class="col-xs-10">
+            <ui-view></ui-view>
+        </div>
+        <footer>
+            <div ng-show="getCurrentSong()" ng-controller="PlayerCtrl">
+                <div class="pull-left">
+                    <button class="btn btn-default" ng-click="previous()">
+                        <span class="glyphicon glyphicon-step-backward"></span>
+                    </button>
+                    <button class="btn btn-default" ng-click="toggle()">
+                        <span class="glyphicon" ng-class="{'glyphicon-pause': isPlaying(), 'glyphicon-play': !isPlaying()}"></span>
+                    </button>
+                    <button class="btn btn-default" ng-click="next()">
+                        <span class="glyphicon glyphicon-step-forward"></span>
+                    </button>
+                </div>
+                <div class="bar">
+                    <div class="progress" ng-click="handleProgressClick($event)">
+                        <div class="progress-bar" ng-style="{width: getPercent() + '%'}"></div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-  </body>
+</body>
+
 </html>
